--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.mychatapptutorial"
+        applicationId "com.example.JustChat"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -27,7 +27,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    namespace 'com.example.mychatapptutorial'
+    namespace 'com.example.JustChat'
 }
 
 dependencies {
